ecmascript/parser/tests/test262-error-references/fail/851bfeb09635c752.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/851bfeb09635c752.js:1:1
  |
1 | 1++
  | ^

